updated markup to allow for content overflow inside each step, description content will be placed in a fixed header group area above the scrollable content

--- a/styles/stepWizardStyles.scss
+++ b/styles/stepWizardStyles.scss
@@ -84,14 +84,18 @@ body {margin:0;padding:0;}
     }
 
     .sw-header {
-        display:table-row;
+        display:table-header-group;
 
         @extend .group;
     }
     .sw-content {
-        display: table-cell;
-        height: 100%;
-        overflow-y: auto;
+        display: table-row;
+
+        .overflow-y {
+            width: 100%;
+            height: 100%;
+            overflow-y: auto;
+        }
     }
 
     &.sw-active {//active class
